# fw-fanctrl-rs

./: Cargo.toml  README.md  install.sh
src/: fan_control.rs  main.rs
src/fan_config/: default.rs  mod.rs
