[package]
name = "fw-fanctrl-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
libc = "0.2.177"
serde = { version = "1", features = ["derive"] }
dirs = "5"
config = "0.15.11"
ron = "0.12.0"


[profile.release]
lto = "fat"
opt-level = 3
strip = true 
codegen-units = 1
debug = 0
debug-assertions = false
